--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-cron": "^3.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
